# civilization_simulation

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.gradle  settings.json
app/: build.gradle
data/: town.txt
docs/: proposal.md  relating_tasks.drawio  sprint_log.md  visualize_hours.py
docs/psudocode/: high_level.psudocode
docs/uml/: high_level.drawio  low_level.drawio
env/: .env.example  example.dev.env  example.prod.env
settings/: example.dev_settings.yaml  example.prod_settings.yaml
src/: GameMap.py  Map.py  Person.py  grid_generator.py  logger.py  main.py  people_generator.py  person.py  settings.py  simulation.py
src/simulation/: simulation.py
src/simulation/grid/: disjoint_set.py  grid.py  grid_disaster_generator.py  grid_generator.py  location.py  structure_generator.py  temperature.py  tempurature.py
src/simulation/grid/building/: barn.py  building.py  building_factory.py  building_type.py  farm.py  home.py  house.py  mine.py  tree.py
src/simulation/grid/structure/: structure.py  structure_factory.py  structure_type.py
src/simulation/people/: home_manager.py  people.py  people_disaster_generator.py  people_generator.py
src/simulation/people/person/: backpack.py  memories.py  memory.py  mover.py  person.py  scheduler.py  thinker.py  vision.py
src/simulation/result/: grid_plotter.py  plotter.py  simulation_state.py  simulation_state_plotter.py  simulation_state_tracker.py  stats.py
src/simulation/visualization/: grid_plotter.py  state.py  state_plotter.py  state_tracker.py  visualizer.py
(+119 files in other folders)
