[tool.poetry]
name = "echoes-of-eden"
version = "0.1.0"
description = ""
authors = ["Nate Stott <nate.stott@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
pathfinding = "^1.0.11"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
